Fix text in about section not aligning correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ body {
     border-radius: 50%;
     margin-top: 40px;
     align-items: center;
-    justify-self: center;
+    justify-content: center;
 
 
 }
@@ -394,10 +394,14 @@ body {
 }
 
 .about-us-big-circle p {
+    font-size: 12px;
     text-align: center;
     color: white;
     letter-spacing: 0.5px;
-    margin-left: 10%;
+    line-height: 80%;
+    inline-size: 80%;
+    align-self: center;
+    margin-left: 30px;
 
 }
 
@@ -881,6 +885,7 @@ body {
         line-height: 13.5px;
         letter-spacing: 0.5px;
         inline-size: 80%;
+        margin-left: 40px;
     }
 
     .box-text {
@@ -1126,6 +1131,7 @@ body {
         font-size: 24px;
         line-height: 18px;
         inline-size: 80%;
+        margin-left: 60px;
 
 
     }
@@ -1188,10 +1194,6 @@ body {
     /* Newsletter */
     .newsletter-box {
         height: 650px;
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-        justify-content: center;
     }
 
     .newsletter {
